# tp-ihm-oscilloscope

./: .clang-format  .gitignore  AppSensor.cpp  AppSensor.hpp  AppSensorList.cpp  AppSensorList.hpp  AppState.cpp  AppState.hpp  CMakeLists.txt  Main.qml  OscilloscopeItem.cpp  OscilloscopeItem.hpp  README.md  apptp2  apptp2_qmltyperegistrations.cpp  main.cpp  run.sh
